force-app/main/default/objects/Work_Record_Document__c/Work_Record_Document__c.object-meta.xml
<CustomObject>
    <label>Work Record Document</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Record Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Record Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>