force-app/main/default/objects/Work_Record_Document__c/fields/Client_Payment_Complete__c.field-meta.xml
<CustomField>
    <fullName>Client_Payment_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Settlement Complete</label>
    <type>Checkbox</type>
</CustomField>