force-app/main/default/objects/Work_Record_Document__c/fields/Client_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Payment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Settlement Date</label>
    <type>Date</type>
</CustomField>