force-app/main/default/objects/Work_Record_Document__c/fields/Client_Payment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Payment_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Settlement Notes</label>
    <type>TextArea</type>
</CustomField>