force-app/main/default/objects/Work_Record_Document__c/fields/Client_Payment_User__c.field-meta.xml
<CustomField>
    <fullName>Client_Payment_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settlement Client</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Record_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>