force-app/main/default/objects/Work_Record_Document__c/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <description>JIRA:AGMPB-572</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Country Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>