force-app/main/default/objects/Work_Record_Document__c/fields/Date_Due__c.field-meta.xml
<CustomField>
    <fullName>Date_Due__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Date Due</label>
    <type>Date</type>
</CustomField>