force-app/main/default/objects/Work_Record_Document__c/fields/Date_Posted__c.field-meta.xml
<CustomField>
    <fullName>Date_Posted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Posted</label>
    <type>Date</type>
</CustomField>