force-app/main/default/objects/Work_Record_Document__c/fields/Equalization_Amount__c.field-meta.xml
<CustomField>
    <fullName>Equalization_Amount__c</fullName>
    <label>Equalization Amount (no longer used)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>