force-app/main/default/objects/Work_Record_Document__c/fields/Filing_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Filing_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filing Deadline</label>
    <type>Date</type>
</CustomField>