force-app/main/default/objects/Work_Record_Document__c/fields/Filing_Method__c.field-meta.xml
<CustomField>
    <fullName>Filing_Method__c</fullName>
    <label>Filing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronic Filing</fullName>
            </value>
            <value>
                <fullName>Paper Filing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>