force-app/main/default/objects/Work_Record_Document__c/fields/Mobile_Employee__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Employee__c</fullName>
    <formula>Work_Record__r.Engagement_Assignee__r.First_Name__c &amp;&quot; &quot;&amp; Work_Record__r.Engagement_Assignee__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Employee</label>
    <type>Text</type>
</CustomField>