force-app/main/default/objects/Work_Record_Document__c/fields/Party_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Party_Responsible__c</fullName>
    <description>JIRA:AGMPB-311</description>
    <label>Party Responsible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>