force-app/main/default/objects/Work_Record_Document__c/fields/Settlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Type__c</fullName>
    <label>Settlement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>