force-app/main/default/objects/Work_Record_Document__c/fields/State_Province_Amount__c.field-meta.xml
<CustomField>
    <fullName>State_Province_Amount__c</fullName>
    <label>State/Province Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>