force-app/main/default/objects/Work_Record_Document__c/fields/State_Province_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Province_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State/Province Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>