force-app/main/default/objects/Work_Record_Document__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal_Tax_Return</fullName>
                <label>Federal Tax Return</label>
            </value>
            <value>
                <fullName>Equalization</fullName>
            </value>
            <value>
                <fullName>FBAR</fullName>
            </value>
            <value>
                <fullName>State_Return</fullName>
                <label>State Return</label>
            </value>
            <value>
                <fullName>Provincial_Return</fullName>
                <label>Provincial Return</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>