force-app/main/default/objects/Work_Record_Document__c/fields/Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Type_Formula__c</fullName>
    <formula>SUBSTITUTE(TEXT(Type__c), &quot;_&quot;, &quot; &quot;)</formula>
    <label>Type Formula</label>
    <type>Text</type>
</CustomField>