force-app/main/default/objects/Work_Record_Document__c/fields/Work_Record__c.field-meta.xml
<CustomField>
    <fullName>Work_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Record</label>
    <referenceTo>Work_Record__c</referenceTo>
    <relationshipLabel>Work Record Documents</relationshipLabel>
    <relationshipName>Work_Record_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>