force-app/main/default/objects/Work_Record_Document__c/fields/Work_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Record_Name__c</fullName>
    <formula>Work_Record__r.Name</formula>
    <label>Work Record Name</label>
    <type>Text</type>
</CustomField>