force-app/main/default/objects/Work_Record_Document__c/validationRules/WorkRecordDocument_VR01_RestStateFields.validationRule-meta.xml
<ValidationRule>
    <fullName>WorkRecordDocument_VR01_RestStateFields</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(
        OR(
            NOT(ISBLANK(State_Province_Name__c)),
            NOT(ISBLANK(State_Province_Amount__c))
        ),
        NOT(
            OR(
                ISPICKVAL(Type__c, &quot;State_Return&quot;),
                ISPICKVAL(Type__c, &quot;Provincial_Return&quot;)
            )
        )
    ),
    AND(
        OR(
            ISPICKVAL(Type__c, &quot;Provincial_Return&quot;),
            ISPICKVAL(Type__c, &quot;State_Return&quot;)
        ),
        OR(
            ISBLANK(State_Province_Amount__c ),
            ISBLANK(State_Province_Name__c )
        )
    )
)</errorConditionFormula>
    <errorMessage>WorkRecordDocument_VR01: State/Province Name and/or State/Province Amount Must populated on work record documents if type is Provincial Return or State Return.</errorMessage>
</ValidationRule>