force-app/main/default/objects/Work_Record_Document__c/validationRules/WorkRecordDocument_VR02_BlankAmtSettType.validationRule-meta.xml
<ValidationRule>
    <fullName>WorkRecordDocument_VR02_BlankAmtSettType</fullName>
    <active>true</active>
    <description>JIRA:AGMPB-859</description>
    <errorConditionFormula>AND(
    $CustomMetadata.DisableAutomation__mdt.Work_Record_Document.IsActiveValidationRule__c = true,
    ISPICKVAL( Type__c , &quot;FBAR&quot;),
    OR(
        NOT(ISBLANK( Amount__c )), 
        NOT(ISPICKVAL( Settlement_Type__c , &quot;&quot;))
    )
)
</errorConditionFormula>
    <errorMessage>WorkRecordDocument_VR02: If Type is &apos;FBAR&apos;, then Amount and Settlement Type must be blank.</errorMessage>
</ValidationRule>