force-app/main/default/objects/Work_Record_Document__c/listViews/Payment_Track_Hub.listView-meta.xml
<ListView>
    <fullName>Payment_Track_Hub</fullName>
    <columns>Work_Record__c</columns>
    <columns>Type__c</columns>
    <columns>Country__c</columns>
    <columns>Party_Responsible__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Federal_Tax_Return</value>
    </filters>
    <label>Payment Track Hub:</label>
</ListView>