force-app/main/default/objects/Work_Record_Document__c/listViews/Tax_Equalization.listView-meta.xml
<ListView>
    <fullName>Tax_Equalization</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Equalization_Amount__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Federal_Tax_Return,Equalization</value>
    </filters>
    <label>Tax Equalization</label>
</ListView>