force-app/main/default/objects/Work_Record_Document__c/listViews/Tax_Payment.listView-meta.xml
<ListView>
    <fullName>Tax_Payment</fullName>
    <columns>NAME</columns>
    <columns>Work_Record__c</columns>
    <columns>Amount__c</columns>
    <columns>Country__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Tax Return</value>
    </filters>
    <label>Tax Payment</label>
</ListView>